# CloudyCam

./: .gitignore  README.md  camera_config.json  pyproject.toml  requirements.txt
src/: CloudyCam.py  logger.py  main.py  packets.py
src/proto/: HelloContainer.proto  HelloContainer_pb2.py  Playback.proto  PlaybackBegin.proto  PlaybackBegin_pb2.py  Playback_pb2.py  Redirect.proto  Redirect_pb2.py  StartPlayback.proto  StartPlayback_pb2.py  TokenContainer.proto  TokenContainer_pb2.py
videos/: .gitplaceholder
